--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 		   <scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>2.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		</dependency>
@@ -72,6 +77,11 @@
 		    <groupId>commons-validator</groupId>
 		    <artifactId>commons-validator</artifactId>
 		    <version>1.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.j2html</groupId>
+		    <artifactId>j2html</artifactId>
+		    <version>1.3.0</version>
 		</dependency>
 	</dependencies>
 
